re-escrito el login, añadido el idioma ingles, arreglo de bugs generales

--- a/LastProyecto/FormFactura.es-AR.resx
+++ b/LastProyecto/FormFactura.es-AR.resx
@@ -117,79 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="&gt;&gt;btnGuardarFactura.Name" xml:space="preserve">
-    <value>btnGuardarFactura</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="btnGuardarFactura.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnGuardarFactura.Location" type="System.Drawing.Point, System.Drawing">
-    <value>795, 13</value>
-  </data>
-  <data name="&gt;&gt;txtFactura.Name" xml:space="preserve">
-    <value>txtFactura</value>
-  </data>
-  <data name="&gt;&gt;txtFactura.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;txtFactura.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="txtFactura.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>FormFactura</value>
-  </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
-  </data>
-  <data name="txtFactura.Multiline" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
   <data name="btnGuardarFactura.Text" xml:space="preserve">
-    <value>Guardar Factura</value>
+    <value>guardar factura</value>
   </data>
-  <data name="btnGuardarFactura.Size" type="System.Drawing.Size, System.Drawing">
-    <value>217, 108</value>
-  </data>
-  <data name="&gt;&gt;btnGuardarFactura.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="txtFactura.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 13</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>FormFactura</value>
-  </data>
-  <data name="&gt;&gt;btnGuardarFactura.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;txtFactura.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1024, 450</value>
-  </data>
-  <data name="&gt;&gt;btnGuardarFactura.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="txtFactura.ScrollBars" type="System.Windows.Forms.ScrollBars, System.Windows.Forms">
-    <value>Both</value>
-  </data>
-  <data name="txtFactura.Size" type="System.Drawing.Size, System.Drawing">
-    <value>775, 425</value>
-  </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>en-US</value>
-  </metadata>
 </root>
